--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,19 @@
     <title>Mortgage Calc</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <!-- Custom CSS  -->
     <link rel="stylesheet" href=" css/styles.css">
 </head>
 
-<body>
+<body ng-app="mortgage.app">
 
     <navbar></navbar>
 
     <div class="container">
-        <div ng-view></div>
+        <ng-view></ng-view>
     </div>
 
     <!-- Dependency Scripts -->
@@ -26,9 +27,8 @@
     <script src="../node_modules/ngstorage/ngStorage.js"></script>
     <script src="../node_modules/chart.js/dist/Chart.bundle.js"></script>
     <script src="../node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
-    <script src="../node_modules/chart.js/Chart.min.js"></script>
+    <script src="../node_modules/chart.js/dist/Chart.min.js"></script>
     <script src="../node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <!-- Custom Scripts -->
     <script src="app.js"></script>
     <script src="components/auth/auth.js"></script>
@@ -39,7 +39,9 @@
     <script src="components/auth/signup/signup.js"></script>
     <script src="components/calc/calc.js"></script>
     <script src="components/navbar/navbar.js"></script>
-    <script src=""></script>
+    <script src="components/calc/tabs/loan-details/loan-details.js"></script>
+    <script src="components/calc/tabs/savings-options/savings-options.js"></script>
+    <script src="components/calc/tabs/stored-calculations/stored-calculations.js"></script>
     <script src=""></script>
 </body>
 
